# juxlang

./: .gitignore  Cargo.toml  INSTALL.md  README.md  bug_probe.jux  check-ups.md  considerations.md  jux-gaps.md  plugin-gap.md
Architecture/: ERRATA.md  JUX-ANNOTATIONS-ADDENDUM.md  JUX-ASYNC-ADDENDUM-v2.md  JUX-BINDGEN-ADDENDUM.md  JUX-BUILD-SYSTEM-ADDENDUM.md  JUX-CLASS-REPRESENTATION-ADDENDUM.md  JUX-CODEGEN-FIXES.md  JUX-COLLECTIONS-ADDENDUM.md  JUX-COMPILER-PIPELINE-ADDENDUM.md  JUX-CORE-LIB-ADDENDUM.md  JUX-DIAGNOSTICS-ADDENDUM.md  JUX-EDITOR-TOOLING-ADDENDUM.md  JUX-ENTRY-POINTS-ADDENDUM.md  JUX-EXCEPTIONS-ADDENDUM.md  JUX-GAPS-ROADMAP.md  JUX-GRAMMAR-ADDENDUM.md  JUX-INHERITANCE-BORROW-ADDENDUM.md  JUX-INTELLIJ-PLUGIN-ADDENDUM.md  JUX-LANG-V1.md  JUX-LANG.md  JUX-LAYOUT-ABI-ADDENDUM.md  JUX-LSP-SERVER-ADDENDUM.md  JUX-MISSING-DEFS-ADDENDUM.md  JUX-OBSERVABLE-PROPERTIES-ADDENDUM.md  JUX-OPERATORS-ADDENDUM.md  JUX-POINTERS-REFERENCES-GUIDE.md  JUX-RUNTIME-ABI-ADDENDUM.md  JUX-SEMANTICS-ADDENDUM.md  JUX-TESTING-ADDENDUM.md  JUX-TYPE-SYSTEM-ADDENDUM.md  JUX-V0.1-READINESS.md
Architecture/Docs/: ERRATA.html  JUX-ANNOTATIONS-ADDENDUM.html  JUX-ASYNC-ADDENDUM-v2.html  JUX-BINDGEN-ADDENDUM.html  JUX-BUILD-SYSTEM-ADDENDUM.html  JUX-CLASS-REPRESENTATION-ADDENDUM.html  JUX-CODEGEN-FIXES.html  JUX-COLLECTIONS-ADDENDUM.html  JUX-COMPILER-PIPELINE-ADDENDUM.html  JUX-CORE-LIB-ADDENDUM.html  JUX-DIAGNOSTICS-ADDENDUM.html  JUX-EDITOR-TOOLING-ADDENDUM.html  JUX-ENTRY-POINTS-ADDENDUM.html  JUX-EXCEPTIONS-ADDENDUM.html  JUX-GAPS-ROADMAP.html  JUX-GRAMMAR-ADDENDUM.html  JUX-INHERITANCE-BORROW-ADDENDUM.html  JUX-INTELLIJ-PLUGIN-ADDENDUM.html  JUX-LANG-V1.html  JUX-LAYOUT-ABI-ADDENDUM.html  JUX-LSP-SERVER-ADDENDUM.html  JUX-MISSING-DEFS-ADDENDUM.html  JUX-OBSERVABLE-PROPERTIES-ADDENDUM.html  JUX-OPERATORS-ADDENDUM.html  JUX-RUNTIME-ABI-ADDENDUM.html  JUX-SEMANTICS-ADDENDUM.html  JUX-TYPE-SYSTEM-ADDENDUM.html  build.ps1  index.html  parser.js  styles.css
benchmarks/: README.md  alloc_churn.jux  dispatch_poly.jux  graph_walk.jux  numeric_mandelbrot.jux  run.ps1  startup.jux
crates/juxc-ast/: Cargo.toml
crates/juxc-backend-rust/: Cargo.toml
crates/juxc-backend-rust/src/: analysis.rs  backend_fqn.rs  decls.rs  exprs.rs  interp.rs  lib.rs  literals.rs  patterns.rs  sizeof_emit.rs  stmts.rs  tests.rs  types.rs  writer.rs
crates/juxc-backend-rust/src/decls/: classes.rs  constructors.rs  enums.rs  functions.rs  interfaces.rs  mod.rs  observers.rs  operators.rs  records.rs
crates/juxc-backend-rust/src/exprs/: array.rs  binary.rs  call.rs  field.rs  mod.rs  simple.rs
crates/juxc-bindgen/: Cargo.toml
crates/juxc-bindgen/examples/: stub.rs
crates/juxc-bindgen/src/: emit.rs  ingest.rs  lib.rs  model.rs  naming.rs  ty.rs
crates/juxc-diagnostics/: Cargo.toml
crates/juxc-driver/: Cargo.toml
crates/juxc-driver/src/: git_deps.rs  lib.rs  manifest.rs  package_check.rs  project.rs  source_map.rs  stdlib.rs  stdlib_embedded.rs  stubs.rs
crates/juxc-driver/tests/: workspace_file_identity.rs
crates/juxc-driver/tests/fixtures/: minicrate.rustdoc.json
crates/juxc-lex/: Cargo.toml
crates/juxc-lex/src/: grammar_spec.rs  lib.rs  rust_keywords.rs  tests.rs  token.rs
crates/juxc-lsp/: Cargo.toml
crates/juxc-lsp/src/: analysis.rs  diagnostics.rs  doc.rs  intel.rs  main.rs  position.rs  scope.rs  server.rs  workspace.rs
crates/juxc-parse/: Cargo.toml
crates/juxc-parse/src/: compilation.rs  decls.rs  exprs.rs  generics.rs  interpolation.rs  lib.rs  literals.rs  patterns.rs  stmts.rs  tests.rs  types.rs
crates/juxc-resolve/: Cargo.toml
crates/juxc-resolve/src/: lib.rs
crates/juxc-source/: Cargo.toml
crates/juxc-tycheck/: Cargo.toml
crates/juxc-tycheck/src/: check.rs  const_eval.rs  definite_assign.rs  env.rs  expand.rs  infer.rs  lib.rs  nullable_check.rs  return_check.rs  symbol_table.rs  ty.rs
editors/: jux.tmLanguage.json
editors/jux.tmbundle/: info.plist
examples/: abs.jux  animals.jux  annotations.jux  arith_exception.jux  arith_uncaught.jux  arithmetic.jux  assertions.jux  async_basic.jux  async_edges.jux  async_mutex.jux  async_streams.jux  async_try_loopctl.jux  atomics.jux  bitops.jux  bounded_generic.jux  box_generic.jux  braceless_control_flow.jux  builder_pattern.jux  cast_test.jux  casts.jux  catch_finally_order.jux  channels.jux  checked_exceptions.jux  collection_pass_by_ref.jux  colors.jux  colors_enum.jux  colors_match.jux  concat.jux  concat_typed.jux  const_eval.jux  const_generics.jux  constants.jux  countdown.jux  crm_dashboard.jux  crm_demo.jux  ctor_overloading.jux  ctor_refs.jux  default_params.jux  deque.jux  downcast_typetest.jux  (+174 more)
examples/_seal_pat/: Cargo.toml
examples/_sealed/: Cargo.toml
examples/_stress_workers/: Cargo.toml
examples/desktop_window/: jux.toml
examples/multifile/: alias_app.jux  alias_lib.jux  app.jux  foo_app.jux  greeter.jux  lib_foo.jux  lib_foo2.jux  polish_app.jux  polish_lib.jux
examples/showcase/: app.jux  math.jux  shapes.jux
examples/stress_alias/: lib.jux
examples/stress_bank/: app.jux
ide/: request-properties-and-main.md  request-property-value-symbol.md
probes/: probe_assertions.jux  probe_hunt2_mixed.jux  probe_hunt4_data.jux  probe_init_order.jux  probe_o1_o2.jux  probe_o3_test.jux  probe_o4.jux  probe_o5.jux  probe_o5b.jux  probe_o6_o7.jux  probe_o8_uncaught.jux  probe_o8_user_uncaught.jux  probe_overload_ambig.jux  probe_overload_types.jux  probe_p1_computed.jux  probe_p245.jux  probe_p3_bind_mismatch.jux  probe_p6_ctor_bind.jux  probe_p7_static.jux  probe_props_base.jux  probe_props_bind.jux  probe_props_diag.jux  probe_props_obs.jux  probe_props_p9.jux  probe_ref_bindings.jux  probe_ref_fields.jux  probe_risk1_generics.jux  probe_risk3_reentrancy.jux  probe_risk6_evalorder.jux  probe_s16_s18.jux  probe_s17_s19.jux  probe_stream_diags.jux  probe_stream_spawn_gate.jux  probe_test_edges.jux  probe_type_alias.jux  probe_vec_param.jux  stress_01_observer_self_set.jux  stress_02_observer_sibling_field.jux  stress_03_collection_property_mutate.jux  stress_04_property_compound_assign.jux  (+5 more)
(+257 files in other folders)
