[workspace]
resolver = "2"
members = [
    "crates/juxc-source",
    "crates/juxc-diagnostics",
    "crates/juxc-lex",
    "crates/juxc-ast",
    "crates/juxc-parse",
    "crates/juxc-resolve",
    "crates/juxc-tycheck",
    "crates/juxc-backend-rust",
    "crates/juxc-driver",
    "crates/juxc-lsp",
    "crates/juxc-bindgen",
    "bin/juxc",
    "bin/jux",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
authors = ["XDSSWAR", "XTREME SOFTWARE SOLUTIONS"]
license = "Apache-2.0"
repository = "https://github.com/xdsswar/juxlang"
description = "The Jux compiler and project tool."

[workspace.dependencies]
juxc-source        = { path = "crates/juxc-source",        version = "0.0.1" }
juxc-diagnostics   = { path = "crates/juxc-diagnostics",   version = "0.0.1" }
juxc-lex           = { path = "crates/juxc-lex",           version = "0.0.1" }
juxc-ast           = { path = "crates/juxc-ast",           version = "0.0.1" }
juxc-parse         = { path = "crates/juxc-parse",         version = "0.0.1" }
juxc-resolve       = { path = "crates/juxc-resolve",       version = "0.0.1" }
juxc-tycheck       = { path = "crates/juxc-tycheck",       version = "0.0.1" }
juxc-backend-rust  = { path = "crates/juxc-backend-rust",  version = "0.0.1" }
juxc-driver        = { path = "crates/juxc-driver",        version = "0.0.1" }
juxc-lsp           = { path = "crates/juxc-lsp",           version = "0.0.1" }
juxc-bindgen       = { path = "crates/juxc-bindgen",       version = "0.0.1" }

# Shared external dependencies. Keep this list short and intentional.
anyhow      = "1"
thiserror   = "1"
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"

# Language-server stack (juxc-lsp). Pinned per JUX-LSP-SERVER-ADDENDUM.md §L.4.
tower-lsp   = "0.20"
tokio       = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "time"] }
dashmap     = "6"
ropey       = "1"

# Foreign-binding generator (juxc-bindgen). `rustdoc-types` is the typed
# schema for `rustdoc --output-format json` (JUX-BINDGEN-ADDENDUM §G.6.1).
# Its FORMAT_VERSION is coupled to the rustdoc that produced the JSON — pin
# and bump together (see §G.13 open question on stub staleness).
rustdoc-types = "0.57"

[profile.release]
lto = "thin"
codegen-units = 1
