[package]
name = "juxc-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Jux language server (LSP) — per JUX-LSP-SERVER-ADDENDUM.md §L."

# The produced binary MUST be named `juxc-lsp` (§L.2). Editors discover it
# on `$PATH` or via an explicit path in their server configuration.
[[bin]]
name = "juxc-lsp"
path = "src/main.rs"

[dependencies]
# Jux front end — the language server reuses these crates verbatim; it
# contains no parser or type checker of its own (§L "Design Philosophy").
# It depends on `juxc-driver` for the backend-free `check` entry, and on
# `juxc-tycheck`/`juxc-source`/`juxc-diagnostics` for the value types those
# results carry.
juxc-source      = { workspace = true }
juxc-diagnostics = { workspace = true }
juxc-tycheck     = { workspace = true }
juxc-driver      = { workspace = true }
# Needed by the IDE-intelligence layer (`intel.rs`) to render declaration
# signatures: the `*Sig` types in `juxc-tycheck` expose `juxc-ast` pieces
# (`TypeRef`, `ReturnType`, `Visibility`, `GenericArg`, …) in their public
# fields, which hover/completion render back to Jux source.
juxc-ast         = { workspace = true }
# The `documentSymbol` handler re-parses the open buffer (lex + parse only) to
# build a declaration outline from its AST.
juxc-lex         = { workspace = true }
juxc-parse       = { workspace = true }

# LSP scaffolding (§L.4). We re-export lsp types through `tower_lsp::lsp_types`
# so the LSP type version always matches `tower-lsp`'s.
tower-lsp        = { workspace = true }
# `completionItem/resolve` round-trips a small JSON payload (`data` on each
# completion item) identifying the declaring symbol; serde_json builds/reads it.
serde_json       = { workspace = true }
tokio            = { workspace = true }
dashmap          = { workspace = true }
ropey            = { workspace = true }
